--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 ELA/data/extract/out/valid_headers/turl_type_turl_header_valid.csv filter=lfs diff=lfs merge=lfs -text
+ELA/data/extract/out/valid_headers/turl_type_turl_valid.json filter=lfs diff=lfs merge=lfs -text
