--- a/ELA/.gitignore
+++ b/ELA/.gitignore
@@ -2,7 +2,7 @@
 .vscode/
 .ipynb_checkpoints
 #data/extract/out
-emb_clus/word_embedding/out
+emb_clus/word_embedding/out/turl_1.0_df.p
 emb_clus/word_embedding/models
 emb_clus/clustering/out
 emb_clus/knn_classifier/out
