--- a/Sato/.gitignore
+++ b/Sato/.gitignore
@@ -5,6 +5,6 @@ tmp/
 topic_model/LDA_cache/
 model/pre_trained_CRF
 model/pre_trained_sherlock
-extract/out/train_test_split/
+extract/out/train_test_split/turl_type_turl.json
 extract/out/features/type_turl
 sven/out/
