--- a/Sato/.gitignore
+++ b/Sato/.gitignore
@@ -3,8 +3,8 @@ results/
 sherlock/pretrained/
 tmp/
 topic_model/LDA_cache/
-model/pre_trained_CRF
-model/pre_trained_sherlock
+#model/pre_trained_CRF
+#model/pre_trained_sherlock
 extract/out/train_test_split/turl_type_turl.json
 extract/out/features/type_turl
 sven/out/
